Add, Edit, Update, Destroy galleries

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,5 +1,9 @@
 <h2>My Galleries</h2>
 
+<nav>
+  <%= link_to "New gallery", "/galleries/new" %>
+</nav>
+
 <% @galleries.each do |gallery| %>
-  <%= gallery.name %>
+  <%= link_to gallery.name, "/galleries/#{gallery.id}" %>
 <% end %>
