--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,9 +1,9 @@
 <h2>My Galleries</h2>
 
 <nav>
-  <%= link_to "New gallery", "/galleries/new" %>
+  <%= link_to "New gallery", new_gallery_path %>
 </nav>
 
 <% @galleries.each do |gallery| %>
-  <%= link_to gallery.name, "/galleries/#{gallery.id}" %>
+  <%= link_to gallery.name, gallery_path(gallery) %>
 <% end %>
