Protect galleries and images

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,10 +1,12 @@
 <h2><%= @gallery.name %></h2>
 
-<nav>
-  <%= link_to "Edit", edit_gallery_path(@gallery) %>
-  <%= link_to "Delete", @gallery,  method: :delete %>
-  <%= link_to "New image", new_gallery_image_path(@gallery) %>
-</nav>
+<% if @gallery.user == current_user %>
+  <nav>
+    <%= link_to "Edit", edit_gallery_path(@gallery) %>
+    <%= link_to "Delete", @gallery,  method: :delete %>
+    <%= link_to "New image", new_gallery_image_path(@gallery) %>
+  </nav>
+<% end %>
 
 <% @gallery.images.each do |image| %>
   <%= link_to image do %>
