--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -9,7 +9,5 @@
 <% end %>
 
 <% @gallery.images.each do |image| %>
-  <%= link_to image do %>
-    <img src="<%= image.url %>">
-  <% end %>
+  <%= link_to image_tag(image.url, width: "200"), image %>
 <% end %>
