--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,6 +1,16 @@
-<h2>New image<h2>
+<h2>New image</h2>
 
 <%= form_for [@gallery, @image] do |form| %>
+
+  <% if @image.errors.any? %>
+    <p>Could not save for the following reasons:</p>
+    <ul>
+      <% @image.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
   <div>
     <%= form.text_field :name, placeholder: "Name" %>
   </div>
