--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -25,5 +25,6 @@
   <div>
     <%= comment.user.email %> said:
     <%= comment.body %>
+    <%= time_ago_in_words(comment.created_at) %> ago
   </div>
 <% end %>
