Add error messages partial and extract partials

--- a/app/views/galleries/edit.html.erb
+++ b/app/views/galleries/edit.html.erb
@@ -1,6 +1,8 @@
 <h2>Edit gallery</h2>
 
 <%= form_for(@gallery) do |form| %>
+  <%= render "form_errors", target: @gallery %>
+
   <%= form.text_field :name %>
   <%= form.submit "Update Gallery" %>
 <% end %>
