--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -5,7 +5,5 @@
 </nav>
 
 <ul>
-  <% @galleries.each do |gallery| %>
-    <li><%= link_to gallery.name, gallery_path(gallery) %></li>
-  <% end %>
+  <%= render @galleries %>
 </ul>
