--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -8,6 +8,4 @@
   </nav>
 <% end %>
 
-<% @gallery.images.each do |image| %>
-  <%= link_to image_tag(image.url, width: "200"), image %>
-<% end %>
+<%= render @images %>
