--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,4 +1,6 @@
 <%= form_for @image do |form| %>
+  <%= render "form_errors", target: @image %>
+
   <div>
     <%= form.text_field :name, placeholder: "Name" %>
   </div>
@@ -6,9 +8,9 @@
     <%= form.text_field :description, placeholder: "Description" %>
   </div>
   <div>
-  <div>
     <%= form.text_field :url, placeholder: "URL" %>
   </div>
   <div>
-  <%= form.submit "Update image" %>
+    <%= form.submit "Update image" %>
+  </div>
 <% end %>
