--- a/app/views/galleries/new.html.erb
+++ b/app/views/galleries/new.html.erb
@@ -1,6 +1,8 @@
 <h2>New gallery</h2>
 
 <%= form_for(@gallery) do |form| %>
+  <%= render "form_errors", target: @gallery %>
+
   <%= form.text_field :name %>
   <%= form.submit "Create Gallery" %>
 <% end %>
