--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,15 +1,7 @@
 <h2>New image</h2>
 
 <%= form_for [@gallery, @image] do |form| %>
-
-  <% if @image.errors.any? %>
-    <p>Could not save for the following reasons:</p>
-    <ul>
-      <% @image.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  <% end %>
+  <%= render "form_errors", target: @image %>
 
   <div>
     <%= form.text_field :name, placeholder: "Name" %>
@@ -18,9 +10,9 @@
     <%= form.text_field :description, placeholder: "Description" %>
   </div>
   <div>
-  <div>
     <%= form.text_field :url, placeholder: "URL" %>
   </div>
   <div>
-  <%= form.submit "Create image" %>
+    <%= form.submit "Create image" %>
+  </div>
 <% end %>
