--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -21,10 +21,4 @@
   <%= link_to "Sign in", sign_in_path %> to comment
 <% end %>
 
-<% @comments.each do |comment| %>
-  <div>
-    <%= comment.user.email %> said:
-    <%= comment.body %>
-    <%= time_ago_in_words(comment.created_at) %> ago
-  </div>
-<% end %>
+<%= render @comments %>
