--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+  <h1><%= link_to 'Pixtr', root_path %></h1>
+  <% if signed_in? %>
+    <nav>
+      <ul>
+        <li><%= link_to 'My Galleries', galleries_path %></li>
+      </ul>
+    </nav>
+  <% end %>
+
   <% if signed_in? %>
     Signed in as: <%= current_user.email %>
       <%= link_to 'Sign out', sign_out_path, method: :delete %>
