--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -11,6 +11,9 @@
     <%= form.text_field :url, placeholder: "URL" %>
   </div>
   <div>
+    <%= form.collection_check_boxes :group_ids, @groups, :id, :name %>
+  </div>
+  <div>
     <%= form.submit "Update image" %>
   </div>
 <% end %>
