Allow users to follow other users

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -11,6 +11,8 @@
 
 <%= image_tag(@image.url, width: 200) %>
 <p><%= @image.description %></p>
+<p>Added by: <%= link_to @image.user.email, @image.user %></p>
+<p>Added on: <%= @image.created_at.to_date %></p>
 
 <% if signed_in? %>
   <%= form_for([@image, @comment]) do |form| %>
