--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,13 @@
 <h1><%= @user.email %></h1>
 
-<%= button_to "Follow", follow_user_path(@user) %>
+<% if current_user != @user %>
+  <% if current_user.following? @user %>
+    <%= button_to "Unfollow #{@user.email}",
+      unfollow_user_path(@user), method: :delete %>
+  <% else %>
+    <%= button_to "Follow", follow_user_path(@user) %>
+  <% end %>
+<% end %>
 
 <div class="thumbs">
   <%= render @images %>
