Join and leave groups

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,2 +1,9 @@
 <h2><%= @group.name %></h2>
+<% if current_user.member? @group %>
+  <%= button_to "Leave Group",
+    leave_group_path(@group),
+    method: :delete %>
+<% else %>
+  <%= button_to "Join Group", join_group_path(@group) %>
+<% end %>
 <%= render @images %>
