Like and Unlike images

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -14,6 +14,16 @@
 <p>Added by: <%= link_to @image.user.email, @image.user %></p>
 <p>Added on: <%= @image.created_at.to_date %></p>
 
+<div>
+  <%= pluralize(@image.likes.count, "like") %>
+</div>
+
+<% if current_user.likes? @image %>
+  <%= button_to "Unlike", unlike_image_path(@image), method: :delete %>
+<% else %>
+  <%= button_to "Like", like_image_path(@image) %>
+<% end %>
+
 <% if signed_in? %>
   <%= form_for([@image, @comment]) do |form| %>
     <%= form.text_area :body %>
