--- a/app/views/following_relationship_activities/_following_relationship_activity.html.erb
+++ b/app/views/following_relationship_activities/_following_relationship_activity.html.erb
@@ -1,3 +1,5 @@
-<%= following_relationship_activity.subject.follower.email %>
-followed
-<%= following_relationship_activity.subject.followed_user.email %>
+<li>
+  <%= following_relationship_activity.follower_email %>
+  followed
+  <%= following_relationship_activity.followed_user_email %>
+</li>
