--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,6 +8,12 @@
   <% else %>
     <%= button_to "Join Group", join_group_path(@group) %>
   <% end %>
+
+  <% if current_user.likes? @group %>
+    <%= button_to "Unlike", unlike_group_path(@group), method: :delete %>
+  <% else %>
+    <%= button_to "Like", like_group_path(@group) %>
+  <% end %>
 <% end %>
 
 <%= render @images %>
