--- a/app/views/like_activities/_like_activity.html.erb
+++ b/app/views/like_activities/_like_activity.html.erb
@@ -1,5 +1,5 @@
 <li>
   <%= like_activity.email %>
   liked
-  <%= link_to like_activity.image_name, like_activity.image %>
+  <%= link_to like_activity.likable_name, like_activity.likable %>
 </li>
