--- a/app/views/comment_activities/_comment_activity.html.erb
+++ b/app/views/comment_activities/_comment_activity.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= comment_activity.email %>
+  <%= link_to comment_activity.email, comment_activity.actor %>
   commented on
   <%= link_to comment_activity.image_name, comment_activity.image %>
 </li>
