--- a/app/views/group_membership_activities/_group_membership_activity.html.erb
+++ b/app/views/group_membership_activities/_group_membership_activity.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= group_membership_activity.subject.member.email %>
+  <%= group_membership_activity.actor.email %>
   joined
-  <%= link_to group_membership_activity.subject.group.name %>
+  <%= link_to group_membership_activity.target.name %>
 </li>
