--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -8,6 +8,9 @@
     <%= form.text_field :description, placeholder: "Description" %>
   </div>
   <div>
+    <%= form.text_field :tag_list, placeholder: "Tags" %>
+  </div>
+  <div>
     <%= form.text_field :url, placeholder: "URL" %>
   </div>
   <div>
