--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,11 @@
     <% end %>
   </div>
 
+  <%= form_for(:search, url: search_path, method: :get) do |form| %>
+    <%= form.text_field :query, placeholder: "Search Here" %>
+    <%= form.submit "Search" %>
+  <% end %>
+
   <%= yield %>
 
 </body>
