--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
   <% if signed_in? %>
-    Signed in as: <%= current_user.email %>
+    Signed in as: <%= link_to current_user.email, account_path %>
       <%= link_to 'Sign out', sign_out_path, method: :delete %>
   <% else %>
     <%= link_to 'Sign in', sign_in_path %>
