--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,32 +9,11 @@
 <body>
 
   <h1><%= link_to 'Pixtr', root_path %></h1>
-  <% if signed_in? %>
-    <nav>
-      <ul>
-        <li><%= link_to 'Galleries', galleries_path %></li>
-        <li><%= link_to 'Groups', groups_path %></li>
-      </ul>
-    </nav>
-  <% end %>
 
-  <% if signed_in? %>
-    Signed in as: <%= link_to current_user.email, account_path %>
-      <%= link_to 'Sign out', sign_out_path, method: :delete %>
-  <% else %>
-    <%= link_to 'Sign in', sign_in_path %>
-  <% end %>
-
-  <div id="flash">
-    <% flash.each do |key, value| %>
-      <div class="flash <%= key %>"><%= value %></div>
-    <% end %>
-  </div>
-
-  <%= form_for(:search, url: search_path, method: :get) do |form| %>
-    <%= form.text_field :query, placeholder: "Search Here" %>
-    <%= form.submit "Search" %>
-  <% end %>
+  <%= render "nav" %>
+  <%= render "user_bar" %>
+  <%= render "flash" %>
+  <%= render "search" %>
 
   <%= yield %>
 
